# LIMEN

./: .deployignore  .dockerignore  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .server-spec.json  BACKEND_IP_FIXED.md  BACKEND_SUPPLY_CHAIN_CHECKLIST.md  BOOT_ORDER_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  DEBUG_ANALYSIS.md  DEEP_OPTIMIZATION_REPORT.md  DEPLOYMENT_LOG.md  E2E_RULES.md  EDGE_DEPLOYMENT_REPORT.md  EDGE_REHEARSAL_RUNBOOK.md  EDGE_RUNNER_SETUP.md  EDGE_SECRETS_ACTUAL_VALUES.md  EDGE_SECRETS_SETUP.md  EDGE_SECRETS_VALUES.md  EDGE_SETUP_CHECKLIST.md  EDGE_SSH_QUICK_REFERENCE.md  EDGE_SSH_SETUP_GUIDE.md  EDGE_SUPPLY_CHAIN_REPORT.md  FRONTEND_BACKEND_SYNC_REPORT.md  FRONTEND_COMMAND.md  MIRROR_MODE_FIX_REPORT.md  MIRROR_MODE_RESTORED.md  MIRROR_MODE_SETUP_GUIDE.md  Makefile  NETWORK_ROUTING_ISSUE.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_FINAL.md  OPTIMIZATION_STATUS.md  OPTIMIZATION_SUMMARY.md  P0_STATUS_REPORT.md  P0_VERIFICATION_REPORT.md  PATH_GUIDE.md  PUSH_INSTRUCTIONS.md  (+10 more)
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
RAG/: 00-home.md  00_repo_structure_policy.md  CHANGELOG.md  FRONTEND_ERRORS_FIXED.md  README.md  SETUP_GUIDE.md  backend-envoy-frontend-503.md  envoy-domain-routing.md  markdown-guide.md
backend/: .gitignore  .golangci.yml  .server-spec.json  COOKIE_DEBUG_GUIDE.md  Dockerfile  Makefile  TEST_CLASSIFICATION.md  ecosystem.config.js  env.example  go.mod  go.sum  test-tags.sh  test_login_cookies.sh
backend/agent/: Cargo.toml  Dockerfile
backend/agent/src/: main.rs
config/: .env.example  .server-spec.json  (+1 more)
(+902 files in other folders)
