[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }

[profile.release]
opt-level = 3          # Maximum optimization
lto = "thin"          # Thin Link-Time Optimization
codegen-units = 1     # Better optimization
strip = true          # Strip symbols for smaller binary
panic = "abort"       # Smaller binary size
